--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # Uncomment these two lines of configuration to
 # enable persistent storage in db/videoshop.
 ################################################
-# spring.datasource.url=jdbc:h2:./db/videoshop
-# spring.jpa.hibernate.ddl-auto=update
+ spring.datasource.url=jdbc:h2:./db/videoshop
+ spring.jpa.hibernate.ddl-auto=update
 
 spring.data.jpa.repositories.bootstrap-mode=deferred
 spring.mvc.hiddenmethod.filter.enabled=true
